# mcp-data-auditor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  company_data.sqlite  compose.debug.yaml  compose.yaml  main.py  pyproject.toml  server.py  setup_db.py
